Add MVC example error i18n support
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>